change ansible config and hosts

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 # Путь к инвентарю (относительно корневой папки, где вы запускаете плейбук)
 inventory = ./inventory/hosts.ini
-
+private_key_file = /home/ansible_svc/.ssh/id_ed25519
 # Использование локальной папки "roles" для поиска ролей
 roles_path = ./roles
 
