--- a/inventory/hosts.ini
+++ b/inventory/hosts.ini
@@ -1,5 +1,4 @@
 [servers]
-lemp-server ansible_host=192.168.1.149 ansible_user=artem
-
+lemp-server ansible_host=192.168.1.84 ansible_user=ansible_svc
 [all:vars]
 ansible_python_inter=/usr/bin/python3
