--- a/roles/common/handlers/main.yml
+++ b/roles/common/handlers/main.yml
@@ -1,3 +1,12 @@
 #SPDX-License-Identifier: MIT-0
 ---
 # handlers file for roles/common
+- name: Restart UFW
+  ansible.builtin.service:
+    name: ufw
+    state: reloaded
+
+- name: Restart system service
+  ansible.builtin.systemd:
+    name: systemd-timesyncd
+    state: restarted
